--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,11 @@ authors = ["Luc Tielen <luc.tielen@kabisa.nl>"]
 [dependencies]
 rocket = "0.3.12"
 rocket_codegen = "0.3.12"
+rocket_contrib = { version = "0.3.12", "default-features" = false, features = ["json"] }
+
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
+
 git2 = "0.7.1"
+walkdir = "2"
