--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Luc Tielen <luc.tielen@kabisa.nl>"]
 
 [dependencies]
 rocket = "0.3.12"
+rocket_cors = "0.2.3"
 rocket_codegen = "0.3.12"
 rocket_contrib = { version = "0.3.12", "default-features" = false, features = ["json"] }
 
